Use progress-monitor instead of progress-meter

--- a/install_scripts/norm/Rakefile
+++ b/install_scripts/norm/Rakefile
@@ -4,7 +4,7 @@ require 'rbbt/util/open'
 require 'rbbt/ner/rner'
 
 
-require 'progress-meter'
+require 'progress-monitor'
 
 $type = ENV['ner'] || :rner 
 $debug = !ENV['debug'].nil?
