--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ lsi: false
 highlighter: rouge
 baseurl: /rbbt
 markdown: kramdown
-theme: jekyll-theme-hacker
+singularity_image_url: https://b2drop.bsc.es/index.php/s/D5rgH3paTefSw2K/download
+singularity_HTS_image_url: https://b2drop.bsc.es/index.php/s/D5rgH3paTefSw2K/download
