--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ baseurl: /rbbt
 markdown: kramdown
 singularity_image_url: https://b2drop.bsc.es/index.php/s/D5rgH3paTefSw2K/download
 singularity_HTS_image_url: https://b2drop.bsc.es/index.php/s/Z2MadBc4jFGYtEY/download
+singularity_Proteomics_image_url: https://b2drop.bsc.es/index.php/s/wjSaLtEmxdJqrbj/download
